markdown and less fix

--- a/less/style.less
+++ b/less/style.less
@@ -13,28 +13,14 @@
   src: local("Open Sans Bold"),
   url("../fonts/opensansbold.woff");
 }
-.slider-reviews__header--visually_hidden {
+.visually_hidden {
   display: none;
-  padding:0;
-  border:0;
-  height: 1px;
-  width: 1px;
-}
-.promo-section__header--visually_hidden {
-  display: none;
-  padding:0;
-  border:0;
-  height: 1px;
-  width: 1px;
-}
-.promo-download__header--visually_hidden {
-  display: none;
-  padding:0;
-  border:0;
-  height: 1px;
-  width: 1px;
 }
 .container {
+  margin: 0 auto;
+}
+
+.wrapper {
   margin: 0 auto;
 }
 @import "variables";
@@ -50,3 +36,4 @@
 @import "reviews.less";
 @import "price-block";
 @import "footer";
+@import "menu-header";
