--- a/less/header.less
+++ b/less/header.less
@@ -5,10 +5,9 @@
   width: @header-width;
   flex:1;
   justify-content: space-between;
-  background-color: rgba(30,39,50, 0.63);
-  &__logo-wrap {
-    margin-top: 22px;
-    margin-bottom: 20px;
-    margin-left: 15px;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  padding-bottom: 52px;
+  background-position: -190px -16px;
+  background-repeat: no-repeat;
   }
-}
+
