fix paddings from block

--- a/less/features-items.less
+++ b/less/features-items.less
@@ -19,18 +19,25 @@
     position: relative;
     z-index: 3;
     flex-grow:1;
-    margin-bottom: 2px;
-    margin-left: 60px;
     flex-grow:1;
+    margin-bottom: -19px;
+    margin-left: 23px;
+    width: 259px;
 
   }
   &__title {
-    padding-top:12px;
+    padding-top:18px;
+    padding-left: 26px;
     .font-mixin(10px;@font-size:18px; @font-weight:bold);
+    text-align: center;
+    display: block;
   }
 }
 .features-items__descr {
   .font-mixin(24px;@font-size:14px; @font-weight:normal);
+  display:block;
+  text-align: center;
+  width: 268px;
 }
 
 
