some markdown and less/css fixes for index

--- a/less/features-header.less
+++ b/less/features-header.less
@@ -4,15 +4,13 @@
   flex-direction: column;
   align-content:center;
   min-width:320px;
+  padding:0px;
   &__title {
     margin: 0 auto;
     padding-top:43px;
-    line-height: 24px;
-    margin-left: 92px;
     width: 237px;
-    text-indent: -27px;
-    font-weight: normal;
-    font-family: @content-font;
+    text-align: center;
+    .font-mixin(24px;@content-font;24px;normal)
 
   }
 }
