--- a/less/header.less
+++ b/less/header.less
@@ -2,12 +2,12 @@
   width: 320px;
   position: relative;
   display: flex;
-  width: @header-width;
+  min-width: @header-width;
+  flex-direction: column;
   flex:1;
   justify-content: space-between;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  padding-bottom: 52px;
-  background-position: -190px -16px;
+  background-position: -190px 0;
   background-repeat: no-repeat;
   }
 
