--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -14,9 +14,9 @@
     display: block;
     .font-mixin(24px; @content-font; 14px; normal);
     text-shadow:-3px -1px 15px #000000;
-    width: 231px;
-    text-indent: -7px;
-    margin-left: 63px;
-    margin-top: 56px;
+    width: 238px;
+    margin-left: 43px;
+    margin-top: 70px;
+    text-align: center;
   }
 }
