--- a/less/body.less
+++ b/less/body.less
@@ -1,5 +1,6 @@
 body {
   padding: 0px;
+  margin: 0px;
   background-repeat: no-repeat;
   background-color: @body-color;
   .font-mixin(24px; @header-font, "Arial",sans-serif; 24px; normal);
