--- a/less/features-items.less
+++ b/less/features-items.less
@@ -5,39 +5,47 @@
   font-size: 14px;
   line-height: 24px;
   display: flex;
-  margin-left: 0px;
+  margin: 0;
   padding: 0;
   flex-direction:column;
-  margin-top: 42px;
-  padding-bottom: 303px;
   &__wrapper {
   display: flex;
   flex-direction:column;
-  padding-top: 56px;
+  padding:0;
+  position: relative;
   }
   &__block {
     position: relative;
     z-index: 3;
     flex-grow:1;
-    flex-grow:1;
-    margin-bottom: -19px;
     margin-left: 23px;
-    width: 259px;
-
+    padding-bottom: 16px;
+    min-width: 320px;
   }
   &__title {
-    padding-top:18px;
-    padding-left: 26px;
-    .font-mixin(10px;@font-size:18px; @font-weight:bold);
+    .font-mixin(24px;@font-size:18px; @font-weight:bold);
     text-align: center;
     display: block;
+    margin: 0;
+    padding: 0;
+    width: 270px;
+    letter-spacing: 1px;
   }
 }
-.features-items__descr {
+.features-items {
+  &__descr {
   .font-mixin(24px;@font-size:14px; @font-weight:normal);
   display:block;
   text-align: center;
-  width: 268px;
+  width: 274px;
 }
+&__image-wrap {
+  background-image: url("../img/iphone-screen-mobile@1x.png");
+  margin: 0 auto;
+  min-width: 150px;
+  min-height: 285px;
+}
+}
+
 
 
