--- a/less/footer.less
+++ b/less/footer.less
@@ -19,9 +19,9 @@
     flex-wrap:wrap;
   }
   &__text {
-    padding-left: 62px;
     .font-mixin(24px;@content-font; 24px; normal);
-    padding-top: 3px;
+    padding-top: 84px;
+    text-align: center;
   }
 }
 .info-block {
@@ -30,11 +30,14 @@
     display: flex;
     flex-direction:column;
     flex:1;
+    min-width: 320px;
     .font-mixin(24px;@font-size:18px;@font-weight:normal);
   }
   &__call-block {
     margin: 0 auto;
     flex:2;
+    min-width: 320px;
+    text-align: center;
   }
   &__mail-block {
     margin: 0 auto;
@@ -51,7 +54,6 @@
   font-size: 24px;
   &__text {
   font-weight: bold;
-  margin-left: 65px;
   letter-spacing: 1px;
 }
 }
@@ -62,37 +64,45 @@
   display: block;
   text-decoration: none;
   font-size: 24px;
-  margin-left: 12px;
+  min-width: 320px;
+  text-align: center;
    &__text {
   font-weight: bold;
-  margin-left: 94px;
   letter-spacing: 1px;
   margin-top: 33px;
+  text-align: center;
 }
 }
 .map-block {
   margin: 0 auto;
-  padding-bottom: 294px;
+  min-width: 320px;
   &__text {
     line-height: 0px;
     font-weight: bold;
-    margin-left: 73px;
+    text-align: center;
     margin-top: 51px;
     letter-spacing: 1px;
   }
   &__link {
   color: #d22856;
-  line-height: 0px;
-  font-family: @content-font;
   display: block;
   text-decoration: none;
   margin-left: 12px;
-  .font-mixin(18px;@content-font;24px;normal)
+  .font-mixin(24px;@content-font;24px;normal);
+  width: 292px;
+  text-align: center;
   }
   address{
     font-style:normal;
+    min-width: 320px;
   }
 }
 .page-footer {
   display:none;
+}
+
+.map-block_map-item {
+  background-image: url('../img/bg-map-mobile@1x.png');
+  min-width: 210px;
+  min-height:245px;
 }
