--- a/less/promo-download.less
+++ b/less/promo-download.less
@@ -5,14 +5,15 @@
   flex-direction: column;
   position:relative;
   color: #ffffff;
-  padding-bottom: 17px;
+  padding-bottom: 9px;
   &__button {
   font-weight:bold;
   width: 255px;
   left:26px;
   height: 33px;
   padding: 7px;
-  top: 20px;
+  top: 33px;
+  left: 19px;
   position:absolute;
   border: 3px solid @white;
   border-radius: 34px;
@@ -32,6 +33,7 @@
   display: flex;
   flex-direction:column;
   align-content:center;
+  width: auto;
 }
 }
 
