adding less styles

--- a/less/body.less
+++ b/less/body.less
@@ -4,6 +4,6 @@ body {
   background-repeat: no-repeat;
   background-color: @body-color;
   .font-mixin(24px; @header-font, "Arial",sans-serif; 24px; normal);
-  color: #000000;
+  background-color: @white;
 }
 
