--- a/less/style.less
+++ b/less/style.less
@@ -23,6 +23,17 @@
 .wrapper {
   margin: 0 auto;
 }
+.container {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.wrapper-flex {
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+  width: 100%;
+}
 @import "variables";
 @import "body";
 @import "mixins";
@@ -38,3 +49,21 @@
 @import "footer";
 @import "menu-header";
 @import "feature-headers";
+@import "contest-page";
+@import "info-user";
+@import "user-form";
+@import "input-form";
+@import "achievments-page";
+@import "catalog-checkbox";
+@import "user-address";
+@import "user-contacts";
+@import "os-choice";
+@import "radio-buttons-group";
+@import "fotm-describe";
+@import "page-shown-footer";
+@import "popup";
+@import "user-blogs";
+@import "blog-post";
+@import "describe-block";
+@import "editor-block";
+@import "filter-range";
