mobile for index fixes

--- a/less/.promo-download.less
+++ b/less/.promo-download.less
@@ -7,7 +7,7 @@
   color: #ffffff;
   &__button {
   font-weight:bold;
-  width: 255px;
+  width: 83%;
   left:26px;
   height: 33px;-
   padding: 7px;
