--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -1,7 +1,7 @@
 .os-nav.os-list {
   display: flex;
   justify-content: space-around;
-  min-width: 280px;
+  width: 77%;
   flex-wrap: wrap;
   margin: 0 auto;
   padding-top: 108px;
@@ -14,8 +14,8 @@
     display: block;
     .font-mixin(24px; @content-font; 14px; normal);
     text-shadow:-3px -1px 15px #000000;
-    width: 238px;
-    margin-left: 43px;
+    width: 91%;
+    margin-left: 20px;
     margin-top: 70px;
     text-align: center;
   }
