--- a/less/reviews.less
+++ b/less/reviews.less
@@ -2,20 +2,15 @@
   .font-mixin(30px, @header-font, 14px, normal);
   background-color: @white;
   min-width: 320px;
-  &__wrapper {
-  display:flex;
-  flex-direction: column;
-  }
 }
 .slider-reviews {
   display: flex;
   flex-direction:column-reverse;
   flex-grow:1;
   &__header {
-    margin-left: 91px;
     margin-top: 42px;
     font-size: 18px;
-    margin-left: 91px;
+    text-align: center;
     letter-spacing: 1px;
     margin-top:42px;
     span {
@@ -24,6 +19,6 @@
   }
   &__text {
     text-align: center;
-    margin-left: 24px;
+    margin-left: 20px;
   }
 }
