--- a/less/features-items.less
+++ b/less/features-items.less
@@ -18,7 +18,7 @@
     position: relative;
     z-index: 3;
     flex-grow:1;
-    margin-left: 23px;
+    width: 100%;
     padding-bottom: 16px;
     min-width: 320px;
   }
@@ -28,7 +28,6 @@
     display: block;
     margin: 0;
     padding: 0;
-    width: 270px;
     letter-spacing: 1px;
   }
 }
@@ -37,13 +36,12 @@
   .font-mixin(24px;@font-size:14px; @font-weight:normal);
   display:block;
   text-align: center;
-  width: 274px;
+  width: 90%;
+  padding-left: 20px;
 }
 &__image-wrap {
-  background-image: url("../img/iphone-screen-mobile@1x.png");
+  max-width: 100%;
   margin: 0 auto;
-  min-width: 150px;
-  min-height: 285px;
 }
 }
 
