--- a/less/header.less
+++ b/less/header.less
@@ -7,5 +7,6 @@
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-position: -190px 0;
   background-repeat: no-repeat;
+  background-size: cover;
   }
 
