less fix for travis

--- a/less/achievments-page.less
+++ b/less/achievments-page.less
@@ -1,14 +1,15 @@
 .achievments-page {
-  width:100%;
+  width: 100%;
   background-color: #f2f2f2;
   margin-top: 32px;
-  &__text {
+}
+.achievments-page__text {
+
   .font-mixin(18px;@header-font;14px;normal);
-  color: darken(#db7188, 5%);
-  text-align: center;
-  text-transform: uppercase;
-  padding-left: 20px;
-  width: 83%;
-  padding-top: 25px;
-  }
+    color: darken(#db7188, 5%);
+    text-align: center;
+    text-transform: uppercase;
+    padding-left: 20px;
+    width: 83%;
+    padding-top: 25px;
 }
