--- a/less/features-header.less
+++ b/less/features-header.less
@@ -1,16 +1,17 @@
 .features {
   background-color: @white;
-  display:flex;
+  display: flex;
   flex-direction: column;
-  align-content:center;
-  min-width:320px;
-  padding:0px;
-  &__title {
+  align-content: center;
+  min-width: 320px;
+  padding: 0px;
+}
+
+.features__title {
     margin: 0 auto;
-    padding-top:43px;
+    padding-top: 43px;
     width: 237px;
     text-align: center;
-    .font-mixin(24px;@content-font;24px;normal)
 
-  }
+    .font-mixin(24px;@content-font;24px;normal);
 }
