--- a/less/filter-range.less
+++ b/less/filter-range.less
@@ -4,9 +4,8 @@
   padding-left: 20px;
 }
 
-.filter-controls {
-  &__min-range,
-  &__max-range {
+.filter-controls__min-range,
+.filter-controls__max-range {
   font-size: 14px;
   vertical-align: top;
   cursor: pointer;
@@ -16,7 +15,7 @@
   color: #ffffff;
   display: none;
   }
-}
+
 .filter-controls input {
   width: 50px;
   margin:0;
@@ -31,7 +30,6 @@
   margin-bottom: 32px;
 }
 
-
 .range-controls {
   background-color: #000000;
   padding-left: 20px;
@@ -40,7 +38,6 @@
   background: rgba(0, 0, 0, 0.3);
 }
 }
-
 
 .range-controls .bar {
   width: 80%;
