--- a/less/input-form.less
+++ b/less/input-form.less
@@ -1,16 +1,17 @@
-.input-form {
-  &__input-label {
+.input-form__input-label {
     padding-left: 44px;
     text-transform: uppercase;
     color: #d22856;
     width: 75%;
+
     .font-mixin(30px;@header-font;14px;normal);
     display: block;
     padding-top: 17px;
-
   }
-  &__input {
+
+.input-form__input {
     padding-left: 20px;
+
     .font-mixin(30px;@header-font;18px;normal);
     width: 88%;
     padding-bottom: 32px;
@@ -18,5 +19,4 @@
     margin-left: 15px;
     width: 76%;
     padding-right: 22px;
-}
 }
