--- a/less/promo-download.less
+++ b/less/promo-download.less
@@ -1,12 +1,15 @@
 .promo-download {
   background-color: #1d2631;
+
   .font-mixin(24px; "Open Sans Light"; 14px; normal);
   display:flex;
   flex-direction: column;
-  position:relative;
+  position: relative;
   color: #ffffff;
   padding-bottom: 9px;
-  &__button {
+}
+
+.promo-download__button {
   font-weight:bold;
   width: 255px;
   left:26px;
@@ -29,10 +32,10 @@
   letter-spacing: 1px;
 }
 }
-&__links {
+
+.promo-download__links {
   display: flex;
   flex-direction:column;
-  align-content:center;
+  align-content: center;
   width: auto;
-}
 }
