--- a/less/contest-page.less
+++ b/less/contest-page.less
@@ -5,7 +5,9 @@
   display: flex;
   width: 100%;
   height: 167px;
-  &__text {
+}
+
+  .contest-page__text {
     font-size: 24px;
     text-shadow: -3px 2px 5px #000000;
     text-align: center;
@@ -15,4 +17,3 @@
     padding-right: 20px;
     font-weight: normal;
   }
-}
