--- a/less/describe-block.less
+++ b/less/describe-block.less
@@ -2,9 +2,9 @@
   width: 100%;
   text-align: center;
   padding-bottom: 63px;
-  &__text {
+  }
+  .describe-block__text {
       .font-mixin(30px;@header-font;14px;normal);
       padding-top: 16px;
       padding-left: 20px;
   }
-}
