--- a/less/features-items.less
+++ b/less/features-items.less
@@ -8,13 +8,14 @@
   margin: 0;
   padding: 0;
   flex-direction:column;
-  &__wrapper {
+  }
+  .features-items__wrapper {
   display: flex;
   flex-direction:column;
   padding:0;
   position: relative;
   }
-  &__block {
+  .features-items__block {
     position: relative;
     z-index: 3;
     flex-grow:1;
@@ -22,7 +23,7 @@
     padding-bottom: 16px;
     min-width: 320px;
   }
-  &__title {
+  .features-items__title {
     .font-mixin(24px;@font-size:18px; @font-weight:bold);
     text-align: center;
     display: block;
@@ -30,17 +31,15 @@
     padding: 0;
     letter-spacing: 1px;
   }
-}
-.features-items {
-  &__descr {
+
+.features-items__descr {
   .font-mixin(24px;@font-size:14px; @font-weight:normal);
   display:block;
   text-align: center;
   width: 90%;
   padding-left: 20px;
 }
-&__image-wrap {
+.features-items__image-wrap {
   max-width: 100%;
   margin: 0 auto;
-}
 }
