--- a/less/info-user.less
+++ b/less/info-user.less
@@ -2,11 +2,13 @@
   background-color: @white;
   width: 100%;
   display: flex;
-  &__text {
+}
+
+.info-user__text {
+
     .font-mixin(30px;@header-font;14px;normal);
-    text-align:center;
+    text-align: center;
     padding-left: 20px;
     padding-top: 33px;
     width: 90%;
   }
-}
