--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -12,29 +12,30 @@
   background-color: @nav-menu-background;
   text-transform: uppercase;
   font-weight: bold;
-  font-size:18px;
+  font-size: 18px;
   line-height: 32px;
   display: none;
-  &__items {
+}
+.main-nav__items {
     padding: 13px;
     min-width: 320px;
     text-align: center;
-    flex-grow:1;
+    flex-grow: 1;
     min-width: 320px;
     border: 1px solid #000000;
   }
-}
+
 .main-nav .site-list {
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  flex-direction:column;
-  justify-content:center;
-  padding:0;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
   margin: 0 auto;
   a {
     color: #ffffff;
     text-decoration: none;
   }
-  }
+}
