--- a/less/menu-header.less
+++ b/less/menu-header.less
@@ -1,9 +1,10 @@
 .menu-header {
     background-color: rgba(30,39,50, 0.63);
     padding:20px;
-    &__logo-wrap {
+    }
+
+    .menu-header__logo-wrap {
       margin-top: 22px;
       margin-bottom: 20px;
       margin-left: 15px;
     }
-}
