--- a/less/radio-buttons-group.less
+++ b/less/radio-buttons-group.less
@@ -1,6 +1,8 @@
 .radio-buttons-group {
   padding-left:20px;
-    &__label {
+}
+
+    .radio-buttons-group__label {
       position: relative;
       display: block;
       padding-left: 30px;
@@ -10,40 +12,41 @@
       width: 80%;
       padding-left: 57px;
       -webkit-transition: all 0.25s linear;
-      .font-mixin(30px;@header-font;18px;normal);
-  }
 
-&__input {
+      .font-mixin(30px;@header-font;18px;normal);
+      &__::before {
+        content: "";
+        display: block;
+        width: 30px;
+        height: 20px;
+        position: absolute;
+        top: -3px;
+        left: -6px;
+        padding-left: 10px;
+        padding-top: 4px;
+        padding-bottom: 10px;
+        border: 3px solid #e5e5e5;
+        border-radius: 50px;
+        background-color: @white;
+      }
+    }
+
+.radio-buttons-group__input {
   display: none;
   line-height: 30px;
   position: relative;
   margin-bottom: 10px;
   font-size: 18px;
-}
-&__input:checked {
+&__:checked {
   display: none;
 }
-&__check::before {
+}
+
+.radio-buttons-group__check::before {
   content: "";
   border-radius: 100%;
   top:10px;
   left: 10px;
   margin:auto;
   background: green;
-}
-&__label::before {
-  content: "";
-  display: block;
-  width: 30px;
-  height: 20px;
-  position: absolute;
-  top: -3px;
-  left: -6px;
-  padding-left: 10px;
-  padding-top: 4px;
-  padding-bottom: 10px;
-  border: 3px solid #e5e5e5;
-  border-radius: 50px;
-  background-color: @white;
-}
 }
