--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -1,17 +1,18 @@
 .os-nav.os-list {
-  display: flex;
-  justify-content: space-around;
-  width: 77%;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  padding-top: 108px;
+    display: flex;
+    justify-content: space-around;
+    width: 77%;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    padding-top: 108px;
 }
-.os-nav {
-  &__item {
+.os-nav__item {
     flex-grow:1;
   }
-  &__title {
+
+.os-nav__title {
     display: block;
+
     .font-mixin(24px; @content-font; 14px; normal);
     text-shadow:-3px -1px 15px #000000;
     width: 91%;
@@ -19,4 +20,3 @@
     margin-top: 70px;
     text-align: center;
   }
-}
