less fix for travis

--- a/less/os-choice.less
+++ b/less/os-choice.less
@@ -1,6 +1,7 @@
 .os-choice {
   background-color: #f2f2f2;
-  &__text {
+}
+.os-choice__text {
     .font-mixin(18px;@header-font;14px;normal);
     color:#d22856;
     text-transform: uppercase;
@@ -9,4 +10,3 @@
     padding-bottom: 24px;
   }
 
-}
