less syntax fix

--- a/less/page-shown-footer.less
+++ b/less/page-shown-footer.less
@@ -1,12 +1,15 @@
 .page-shown-footer {
-  width:100%;
+  width: 100%;
   text-align: center;
-  &__copyright-text {
-    .font-mixin(18px;@content-font;14px;normal);
-    width: 89%;
-    padding-top: 44px;
-  }
 }
+
+.page-shown-footer__copyright-text {
+
+    .font-mixin(18px;@content-font;14px;normal);
+      width: 89%;
+      padding-top: 44px;
+  }
+
 .social__list {
   list-style-type: none;
 }
