--- a/less/popup.less
+++ b/less/popup.less
@@ -1,18 +1,19 @@
 .popup {
-  width:100%;
-  background-color:@white;
-  position: relative;
-  display: none;
-  &__header {
+    width: 100%;
+    background-color: @white;
+    position: relative;
+    display: none;
+    .popup__header {
     .font-mixin(24px;@header-font;18px;bold);
     text-align: center;
-  }
-  &__text {
+}
+  .popup__text {
+
     .font-mixin(24px;@header-font;14px;normal);
     padding-bottom: 22px;
     padding-left: 20px;
   }
-  &__button-submit {
+    .popup__button-submit {
     padding: 10px;
     width: 92%;
     height: 100%;
@@ -24,10 +25,10 @@
     height: 59px;
     border: none;
     cursor: pointer;
+
     .font-mixin(30px;@content-font;18px;bold);
     text-transform: uppercase;
-    color:@white;
+    color: @white;
     text-align: center;
     margin-left: 20px;
   }
-}
