another less for travis fix

--- a/less/features-header.less
+++ b/less/features-header.less
@@ -4,14 +4,14 @@
   flex-direction: column;
   align-content: center;
   min-width: 320px;
-  padding: 0px;
+  padding: 0;
 }
 
 .features__title {
-    margin: 0 auto;
-    padding-top: 43px;
-    width: 237px;
-    text-align: center;
+  margin: 0 auto;
+  padding-top: 43px;
+  width: 237px;
+  text-align: center;
 
-    .font-mixin(24px;@content-font;24px;normal);
+  .font-mixin(24px;@content-font;24px;normal);
 }
