--- a/less/footer.less
+++ b/less/footer.less
@@ -3,61 +3,61 @@
 }
 
 .info-block {
-    display: flex;
-    flex-wrap: wrap;
-    align-content:center;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-top: 190px;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content:center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 190px;
+  width: 100%;
 
-    .font-mixin(20px; @header-font; 18px; bold);
-      background-color: @white;
+  .font-mixin(20px; @header-font; 18px; bold);
+  background-color: @white;
 }
 
 .info-block__wrapper {
-    padding: 0;
-    display: flex;
-    justify-content: column;
-    flex-wrap: wrap;
-  }
+  padding: 0;
+  display: flex;
+  justify-content: column;
+  flex-wrap: wrap;]
+}
 
-  .info-block__text {
+.info-block__text {
 
-    .font-mixin(24px;@content-font; 24px; normal);
-    padding-top: 84px;
-    text-align: center;
-  }
+  .font-mixin(24px;@content-font; 24px; normal);
+  padding-top: 84px;
+  text-align: center;
+}
 
 .info-block__contacts {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    min-width: 320px;
-    .font-mixin(24px;@font-size:18px;@font-weight:normal);
-  }
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-width: 320px;
+  .font-mixin(24px;@font-size:18px;@font-weight:normal);
+}
 
   .info-block__call-block {
-    margin: 0 auto;
-    flex: 2;
-    width: 100%;
-    text-align: center;
-  }
+  margin: 0 auto;
+  flex: 2;
+  width: 100%;
+  text-align: center;
+}
 
 .info-block__mail-block {
-    margin: 0 auto;
-    flex: 2;
-  }
+  margin: 0 auto;
+  flex: 2;
+}
 
 .phone {
-    color: #d22856;
-    line-height: 0px;
-    font-family: @content-font;
-    display: block;
-    text-decoration: none;
-    font-size: 24px;
-  }
+  color: #d22856;
+  line-height: 0px;
+  font-family: @content-font;
+  display: block;
+  text-decoration: none;
+  font-size: 24px;
+}
 
 .phone__text {
   font-weight: bold;
@@ -65,22 +65,22 @@
 }
 
 .mail {
-    color: #d22856;
-    line-height: 0px;
-    font-family: @content-font;
-    display: block;
-    text-decoration: none;
-    font-size: 24px;
-    width: 100%;
-    text-align: center;
+  color: #d22856;
+  line-height: 0px;
+  font-family: @content-font;
+  display: block;
+  text-decoration: none;
+  font-size: 24px;
+  width: 100%;
+  text-align: center;
 }
 
 .mail__text {
-    font-weight: bold;
-    letter-spacing: 1px;
-    margin-top: 33px;
-    text-align: center;
-    }
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin-top: 33px;
+  text-align: center;
+}
 
 .map-block {
   margin: 0 auto;
@@ -88,33 +88,33 @@
 }
 
 .map-block__text {
-    line-height: 0px;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 51px;
-    letter-spacing: 1px;
+  line-height: 0px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 51px;
+  letter-spacing: 1px;
   }
 
 .map-block__link {
-    color: #d22856;
-    display: block;
-    text-decoration: none;
-    margin-left: 12px;
+  color: #d22856;
+  display: block;
+  text-decoration: none;
+  margin-left: 12px;
 
-    .font-mixin(24px;@content-font;24px;normal);
-    width: 90%;
-    text-align: center;
-  }
-  address{
-    font-style:normal;
-    width: 90%;
-  }
+  .font-mixin(24px;@content-font;24px;normal);
+  width: 90%;
+  text-align: center;
+}
+  address {
+  font-style: normal;
+  width: 90%;
+}
 
 .page-footer {
-    display: none;
+  display: none;
 }
 
 .map-block_map-item {
-    margin: 0 auto;
-    width: 100%;
+  margin: 0 auto;
+  width: 100%;
 }
