--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -1,9 +1,5 @@
 .main-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   position: absolute;
   top: 33px;
@@ -16,19 +12,17 @@
   line-height: 32px;
   display: none;
 }
+
 .main-nav__items {
-    padding: 13px;
-    min-width: 320px;
-    text-align: center;
-    flex-grow: 1;
-    min-width: 320px;
-    border: 1px solid #000000;
-  }
+  padding: 13px;
+  text-align: center;
+  flex-grow: 1;
+  width: 100%;
+  border: 1px solid #000000;
+}
 
 .main-nav .site-list {
   list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   justify-content: center;
