--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,17 +1,18 @@
-  .font-mixin(@line-height; @font-family:"Open Sans"; @font-size; @font-weight) {
-    line-height:  @line-height;
-    font-family:  @font-family;
-    font-size:    @font-size;
-    font-weight:  @font-weight;
-  }
-  .basic_parametres (@display; @width; @height) {
-    width: @width;
-    height: @height;
-    display: @display;
-  }
-  // @margin {
-  //   margin: 0 auto;
-  // }
+.font-mixin(@line-height; @font-family:"Open Sans"; @font-size; @font-weight) {
+  line-height: @line-height;
+  font-family: @font-family;
+  font-size:: @font-size;
+  font-weight: @font-weight;
+}
+
+.basic_parametres (@display; @width; @height) {
+  width: @width;
+  height: @height;
+  display: @display;
+}
+// @margin {
+//   margin: 0 auto;
+// }
 .margin-center(@margin: 0 auto) {
-  margin: @margin;
+margin: @margin;
 }
