--- a/less/promo-section.less
+++ b/less/promo-section.less
@@ -5,19 +5,20 @@
   position: relative;
   .wrapper {
     margin: 0 auto;
-
   }
 }
+
 .index {
   min-height: 391px;
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
+
 .promo-section::before {
-    content: "";
+    content: " ";
     background-image: url('../img/iphone-hand-mobile@1x.png');
     position: absolute;
     width: 262px;
     height: 308px;
-    top:112px;
+    top: 112px;
     background-repeat: no-repeat;
-  }
+}
