--- a/less/variables.less
+++ b/less/variables.less
@@ -1,14 +1,14 @@
-  @header-font: "Open Sans";
-  @content-font: "Open Sans Light";
-  @header-width: 320px;
-  @mobile-width: 320px;
-  @header-height:67px;
-  @header-color: rgb(30,39,50, 0.3);
-  @nav-list-color: #ffffff;
-  @nav-menu-width: 700px;
-  @nav-menu-height: 255px;
-  @nav-menu-background: #283645;
-  @phone-screen-width: 320px;
-  @body-color: #1d2631;
-  @white: #ffffff;
-  @black: #000000;
+@header-font: "Open Sans";
+@content-font: "Open Sans Light";
+@header-width: 320px;
+@mobile-width: 320px;
+@header-height:67px;
+@header-color: rgb(30, 39, 50, 0.3);
+@nav-list-color: #ffffff;
+@nav-menu-width: 700px;
+@nav-menu-height: 255px;
+@nav-menu-background: #283645;
+@phone-screen-width: 320px;
+@body-color: #1d2631;
+@white: #ffffff;
+@black: #000000;
