--- a/less/blog-post.less
+++ b/less/blog-post.less
@@ -5,13 +5,15 @@
   flex-direction: column;
   background-color: #f2f2f2;
 }
+
 .blog-post__item {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
   padding-bottom: 38px;
-  }
+}
+
 .blog-post__image {
   margin: 0 auto;
   padding-left: 20px;
@@ -23,35 +25,38 @@
   padding-left: 20px;
 
   .font-mixin(24px;@header-font;14px;normal);
-}
+  }
 
 .blog-post__header {
   font-weight: bold;
   font-size: 14px;
   display: inline-block;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   margin-top: 11px;
-}
-.blog-post__text {
-    padding: 0;
-    margin: 0;
   }
 
+.blog-post__text {
+  padding: 0;
+  margin: 0;
+}
+
 .blog-post__info {
-    padding-top: 11px;
-    padding-left: 26px;
-  }
+  padding-top: 11px;
+  padding-left: 26px;
+}
 
 img {
   max-width: 100%;
 }
-.like-text, .like-counts {
+.like-text,
+.like-counts {
 
   .font-mixin(24px;@header-font;12px;normal);
-  color:#d22856;
+  color: #d22856;
   text-transform: uppercase;
 }
+
 .time-tamp {
 
   .font-mixin(24px;@content-font;12px;normal);
@@ -61,7 +66,7 @@ img {
 }
 
 .panorama {
-  padding-left: 0px;
+  padding-left: 0;
   width: 100%;
   position: relative;
 }
