--- a/less/body.less
+++ b/less/body.less
@@ -1,8 +1,8 @@
 body {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   background-repeat: no-repeat;
   background-color: @body-color;
   .font-mixin(24px; @header-font, "Arial",sans-serif; 24px; normal);
-  background-color: @white;
+  // background-color: @white;
 }
