--- a/less/user-blogs.less
+++ b/less/user-blogs.less
@@ -1,15 +1,14 @@
 .user-blogs {
-  width:100%;
-  text-align:center;
+  width: 100%;
+  text-align: center;
   display: flex;
-  flex-direction:column;
-  &__text {
-    padding-bottom: 43px;
-    .font-mixin(30px;@header-font;14px;normal);
-    padding-top: 33px;
-    padding-left: 20px;
-    width: 60%;
-    padding-left: 20px;
-    width: 83%;
-  }
+  flex-direction: column;
+}
+
+.user-blogs__text {
+  padding-bottom: 43px;
+  .font-mixin(30px;@header-font;14px;normal);
+  padding-top: 33px;
+  padding-left: 20px;
+  width: 83%;
 }
