less fix for travis

--- a/less/blog-post.less
+++ b/less/blog-post.less
@@ -25,7 +25,7 @@
   padding-left: 20px;
 
   .font-mixin(24px;@header-font;14px;normal);
-  }
+}
 
 .blog-post__header {
   font-weight: bold;
@@ -34,7 +34,7 @@
   margin: 0;
   padding: 0;
   margin-top: 11px;
-  }
+}
 
 .blog-post__text {
   padding: 0;
@@ -49,6 +49,7 @@
 img {
   max-width: 100%;
 }
+
 .like-text,
 .like-counts {
 
@@ -77,9 +78,9 @@ img {
   .font-mixin(24px;@header-font;12px;bold);
   background-color: #d22856;
   text-transform: uppercase;
-  color:@white;
+  color: @white;
   text-align: center;
-  top: 0px;
+  top: 0;
   right: 27px;
   padding-bottom: 7px;
   padding-top: 4px;
