--- a/less/editor-block.less
+++ b/less/editor-block.less
@@ -7,7 +7,8 @@
   padding-bottom: 39px;
 }
 
-.editor-block__button, .editor-block__button--disable {
+.editor-block__button,
+.editor-block__button--disable {
   display: block;
   width: 78%;
   padding-left: 20px;
@@ -41,6 +42,6 @@
   padding-top: 18px;
 }
 
-  .image-editor__tools {
+.image-editor__tools {
   padding-top: 88px;
 }
