--- a/less/footer.less
+++ b/less/footer.less
@@ -19,7 +19,7 @@
   padding: 0;
   display: flex;
   justify-content: column;
-  flex-wrap: wrap;]
+  flex-wrap: wrap;
 }
 
 .info-block__text {
@@ -38,7 +38,7 @@
   .font-mixin(24px;@font-size:18px;@font-weight:normal);
 }
 
-  .info-block__call-block {
+.info-block__call-block {
   margin: 0 auto;
   flex: 2;
   width: 100%;
@@ -105,7 +105,8 @@
   width: 90%;
   text-align: center;
 }
-  address {
+
+address {
   font-style: normal;
   width: 90%;
 }
