--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,7 +1,7 @@
 .font-mixin(@line-height; @font-family:"Open Sans"; @font-size; @font-weight) {
   line-height: @line-height;
   font-family: @font-family;
-  font-size:: @font-size;
+  font-size: @font-size;
   font-weight: @font-weight;
 }
 
