--- a/less/popup.less
+++ b/less/popup.less
@@ -21,12 +21,9 @@
 .popup__button-submit {
   padding: 10px;
   width: 92%;
-  height: 100%;
-  display: block;
-  padding: 0;
+  // height: 100%;
   display: block;
   background-color: #2aab6d;
-  width: 91%;
   height: 59px;
   border: none;
   cursor: pointer;
