--- a/less/user-contacts.less
+++ b/less/user-contacts.less
@@ -1,5 +1,5 @@
 .user-contacts {
-  display:flex;
+  display: flex;
   justify-content: space-around;
   flex-direction: column;
   padding-left: 20px;
@@ -12,12 +12,11 @@
 }
 
 .user-contacts__input {
-  width: 95%;
   text-align: left;
 
   .font-mixin(30px;@header-font;18px;normal);
   height: 53px;
   width: 89%;
-  padding-bottom: 0px;
+  padding-bottom: 0;
   padding-left: 20px;
 }
