another less for travis fix

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,11 +1,11 @@
 .info-block__header--visually_hidden {
-    display:none;
+  display: none;
 }
 
 .info-block {
   display: flex;
   flex-wrap: wrap;
-  align-content:center;
+  align-content: center;
   flex-direction: row;
   justify-content: space-between;
   padding-top: 190px;
@@ -52,7 +52,7 @@
 
 .phone {
   color: #d22856;
-  line-height: 0px;
+  line-height: 0;
   font-family: @content-font;
   display: block;
   text-decoration: none;
@@ -66,7 +66,7 @@
 
 .mail {
   color: #d22856;
-  line-height: 0px;
+  line-height: 0;
   font-family: @content-font;
   display: block;
   text-decoration: none;
@@ -88,12 +88,12 @@
 }
 
 .map-block__text {
-  line-height: 0px;
+  line-height: 0;
   font-weight: bold;
   text-align: center;
   margin-top: 51px;
   letter-spacing: 1px;
-  }
+}
 
 .map-block__link {
   color: #d22856;
