--- a/less/promo-section.less
+++ b/less/promo-section.less
@@ -16,7 +16,7 @@
 
 .promo-section::before {
   content: " ";
-  background-image: url('../img/iphone-hand-mobile@1x.png');
+  background-image: url("../img/iphone-hand-mobile@1x.png");
   position: absolute;
   width: 262px;
   height: 308px;
