--- a/less/menu-header.less
+++ b/less/menu-header.less
@@ -1,6 +1,16 @@
 .menu-header {
   background-color: rgba(30, 39, 50, 0.63);
-  padding: 20px;
+  padding-bottom: 47px;
+  width: 100%;
+
+@media (min-width: @desktop-width) {
+  padding-bottom: 85px;
+  width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+    padding-bottom: 74px;
+  }
 }
 
 .menu-header__logo-wrap {
