--- a/less/body.less
+++ b/less/body.less
@@ -6,3 +6,15 @@ body {
   .font-mixin(24px; @header-font, "Arial",sans-serif; 24px; normal);
   // background-color: @white;
 }
+
+img {
+  max-width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+  background: #1d2632;
+}
+
+@media(min-width: @desktop-width) {
+  background: #1d2632;
+}
