--- a/less/feature-headers.less
+++ b/less/feature-headers.less
@@ -1,3 +1,23 @@
 .features-headers {
-  padding-bottom: 115px;
+  padding-top: 38px;
+   margin:0 auto;
+   text-align: center;
+
+   .br-separator {
+    display: none;
+    @media (min-width: @tablet-width) {
+      display: inline;
+    }
+   }
+   @media (min-width: @tablet-width) {
+    width: 95%;
+    padding:0;
+    margin-top: 39px;
+    line-height: 20px;
+    padding-bottom: 126px;
+  }
+
+  @media (min-width: @desktop-width) {
+  background: #1d2632;
+}
 }
