--- a/less/features-header.less
+++ b/less/features-header.less
@@ -3,15 +3,23 @@
   display: flex;
   flex-direction: column;
   align-content: center;
-  min-width: 320px;
+  width: 100%;
   padding: 0;
 }
 
 .features__title {
   margin: 0 auto;
   padding-top: 43px;
-  width: 237px;
+  width: 100%;
   text-align: center;
 
   .font-mixin(24px;@content-font;24px;normal);
+
+  @media (min-width: @tablet-width) {
+    font-size: 40px;
+    width: auto;
+    margin:0;
+    padding:0;
+    line-height: 40px;
+  }
 }
