--- a/less/features-items.less
+++ b/less/features-items.less
@@ -8,6 +8,13 @@
   margin: 0;
   padding: 0;
   flex-direction: column;
+
+  .mobile_hidden {
+    display: none;
+    @media (min-width: @tablet-width) {
+      display: block;
+    }
+  }
 }
 
 .features-items__wrapper {
@@ -24,6 +31,12 @@
   width: 100%;
   padding-bottom: 16px;
   min-width: 320px;
+
+  @media (min-width: @tablet-width) {
+    width: 44%;
+    padding-right: 20px;
+    align-self: flex-end;
+  }
 }
 
 .features-items__title {
@@ -34,7 +47,24 @@
   margin: 0;
   padding: 0;
   letter-spacing: 1px;
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    text-align: left;
+    padding-left: 20px;
+  }
 }
+
+.features-items__title--custom_size {
+
+    @media (min-width: @tablet-width) {
+      .font-mixin(33px;@header-font;30px;bold);
+      width: 50%;
+      padding-left: 20px;
+      margin-top: 86px;
+    }
+  }
 
 .features-items__descr {
 
@@ -43,9 +73,26 @@
   text-align: center;
   width: 90%;
   padding-left: 20px;
+
+  @media (min-width: @tablet-width)  {
+    text-align: left;
+    width: auto;
+    margin-top: 12px;
+}
 }
 
 .features-items__image-wrap {
   max-width: 100%;
   margin: 0 auto;
+
+   @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+.features-items__link {
+  @media (min-width: @tablet-width) {
+    margin-left: 20px;
+    color: #d22856;
+    text-decoration: underline;
+  }
 }
