--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -5,6 +5,18 @@
   flex-wrap: wrap;
   margin: 0 auto;
   padding-top: 108px;
+  @media (min-width: @desktop-width) {
+    background: none;
+    width: 38%;
+    justify-content:space-evenly;
+    margin: 0;
+    padding-left: 5%;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 49%;
+    margin-left: 0;
+  }
 }
 
 .os-nav__item {
@@ -13,6 +25,12 @@
 
 .os-nav__title {
   display: block;
+  .font-mixin(24px; @content-font; 14px; normal);
+  text-shadow:-3px -1px 15px #000000;
+  width: 91%;
+  margin-left: 20px;
+  margin-top: 60px;
+  text-align: center;
 
   .font-mixin(24px; @content-font; 14px; normal);
   text-shadow: -3px -1px 15px #000000;
@@ -20,4 +38,10 @@
   margin-left: 20px;
   margin-top: 70px;
   text-align: center;
+
+   @media (min-width: @tablet-width) {
+    font-size: 18px;
+    margin-left: 0;
+    width: 54%;
+  }
 }
