--- a/less/promo-download.less
+++ b/less/promo-download.less
@@ -7,6 +7,13 @@
   position: relative;
   color: #ffffff;
   padding-bottom: 9px;
+  @media (min-width: @desktop-width) {
+    background: none;
+  }
+
+  @media (min-width: @tablet-width) {
+    background: none;
+  }
 }
 
 .promo-download__button {
@@ -22,6 +29,20 @@
   text-align: center;
   cursor: pointer;
   padding-left: 14px;
+
+  @media (min-width: @desktop-width) {
+    background: none;
+    width: 22%;
+    left: 121px;
+    top: 0;
+    padding-left: 1%;
+  }
+  @media (min-width: @tablet-width) {
+    width: 39%;
+    padding-left: 19px;
+    left:39px;
+    top:7px;
+  }
 
   a {
     text-decoration: none;
