--- a/less/reviews.less
+++ b/less/reviews.less
@@ -2,13 +2,23 @@
 
   .font-mixin(30px, @header-font, 14px, normal);
   background-color: @white;
-  min-width: 320px;
+  width: 100%;
+
+   @media (min-width: @tablet-width) {
+    font-size: 18px;
+  }
 }
 
 .slider-reviews {
   display: flex;
   flex-direction: column-reverse;
   flex-grow: 1;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 106px;
+  }
 }
 
 .slider-reviews__header {
@@ -17,12 +27,33 @@
   text-align: center;
   letter-spacing: 1px;
 
+  @media (min-width: @tablet-width) {
+    .font-mixin(30px;@header-font;20px;bold);
+    order: 1;
+    margin-top: 36px;
+  }
+
   span {
     display: none;
+
+    @media (min-width: @tablet-width) {
+      display: inline-block;
+      font-size: 14px;
+      font-weight: normal;
+      order: 2;
+    }
   }
 }
 
 .slider-reviews__text {
   text-align: center;
   margin-left: 20px;
+  width: 97%;
+  text-align: center;
+
+  @media (min-width: @tablet-width)  {
+    order:3;
+    padding-left: 20px;
+    width: auto;
+  }
 }
