--- a/less/body.less
+++ b/less/body.less
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
   background-repeat: no-repeat;
-  background-color: @body-color;
+  background-color: @white;
   .font-mixin(24px; @header-font, "Arial",sans-serif; 24px; normal);
   // background-color: @white;
 }
