--- a/less/catalog-checkbox.less
+++ b/less/catalog-checkbox.less
@@ -2,6 +2,10 @@
   .font-mixin(30px;@header-font;18px;normal);
   padding-left: 20px;
   padding-top: 33px;
+
+  @media (min-width: @tablet-width) {
+
+  }
 }
 
 .catalog-checkbox__label {
@@ -38,7 +42,7 @@
   background-color: @white;
 }
 
-.catalog-checkbox__input--active:checked + .catalog-checkbox__label::after {
+.catalog-checkbox__input:checked + .catalog-checkbox__label::after {
   content: "";
   width: 31px;
   height: 24px;
@@ -48,4 +52,5 @@
   transform: translate(50%, 50%);
   background-repeat: no-repeat;
   background-size: contain;
+  background-image: url('../img/icon-yes.svg');
 }
