--- a/less/features-header.less
+++ b/less/features-header.less
@@ -9,9 +9,10 @@
 
 .features__title {
   margin: 0 auto;
-  padding-top: 43px;
   width: 100%;
   text-align: center;
+  padding-bottom: 26px;
+  padding-top: 13px;
 
   .font-mixin(24px;@content-font;24px;normal);
 
