--- a/less/promo-download.less
+++ b/less/promo-download.less
@@ -18,7 +18,7 @@
 
 .promo-download__button {
   font-weight: bold;
-  width: 255px;
+  width: 83%;
   height: 33px;
   padding: 7px;
   top: 33px;
@@ -40,8 +40,8 @@
   @media (min-width: @tablet-width) {
     width: 39%;
     padding-left: 19px;
-    left:39px;
-    top:7px;
+    left: 47px;
+    top: -105px;
   }
 
   a {
