--- a/less/user-address.less
+++ b/less/user-address.less
@@ -4,4 +4,9 @@
   width: 100%;
   text-transform: uppercase;
   padding-bottom: 48px;
+
+  @media (min-width: @tablet-width) {
+    order: 3;
+  }
 }
+
