--- a/less/user-form.less
+++ b/less/user-form.less
@@ -3,4 +3,9 @@
   width: 100%;
   flex-direction: column;
   margin: 0 auto;
+  background-color: @white;
+
+  @media (min-width: @tablet-width) {
+    order:1;
+  }
 }
