--- a/less/achievments-page.less
+++ b/less/achievments-page.less
@@ -2,6 +2,13 @@
   width: 100%;
   background-color: #f2f2f2;
   margin-top: 32px;
+
+  @media (min-width: @tablet-width) {
+    order: 4;
+    background-color: @white;
+    margin-top: 0;
+    margin-bottom: 60px;
+  }
 }
 
 .achievments-page__text {
@@ -13,4 +20,13 @@
   padding-left: 20px;
   width: 83%;
   padding-top: 25px;
+  @media (min-width: @tablet-width) {
+    padding-bottom: 21px;
+    padding-top: 0;
+    margin: 0 auto;
+    margin-top: -10px;
+    margin-left: auto;
+    margin-right: auto;
+    background: @white;
+  }
 }
