--- a/less/info-user.less
+++ b/less/info-user.less
@@ -2,13 +2,48 @@
   background-color: @white;
   width: 100%;
   display: flex;
+
+  .font-mixin(30px;@header-font;14px;normal);
+  text-align: center;
+  margin: 0 auto;
+  @media (min-width: @tablet-width) {
+    width: 78%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
 }
 
 .info-user__text {
 
   .font-mixin(30px;@header-font;14px;normal);
   text-align: center;
-  padding-left: 20px;
   padding-top: 33px;
-  width: 90%;
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+    margin: 0;
+    padding-left: 20px;
+  }
+}
+
+.separator__form-text {
+  display: inline;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+    font-size: 18px;
+    width: auto;
+  }
+}
+
+.info-user__text--mobile-hidden {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: inline;
+    font-size: 18px;
+    padding-left: 20px;
+
+  }
 }
