--- a/less/input-form.less
+++ b/less/input-form.less
@@ -1,3 +1,33 @@
+ .input-block__form {
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content:unset;
+    flex-direction:row;
+
+  }
+ }
+  .input-block__form:nth-of-type(1) {
+
+    @media (min-width: @tablet-width) {
+      order:2;
+    }
+  }
+
+  .input-block__form:nth-of-type(2) {
+
+    @media (min-width: @tablet-width) {
+      order:1;
+  }
+}
+
+.input-block__form:nth-of-type(3) {
+
+    @media (min-width: @tablet-width) {
+      order:3;
+  }
+}
+
 .input-form__input-label {
   padding-left: 44px;
   text-transform: uppercase;
@@ -7,6 +37,11 @@
   .font-mixin(30px;@header-font;14px;normal);
   display: block;
   padding-top: 17px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    width: 14%;
+  }
 }
 
 .input-form__input {
@@ -18,4 +53,10 @@
   margin-left: 15px;
   width: 76%;
   padding-right: 22px;
+  @media (min-width: @tablet-width) {
+    width: 67%;
+    padding-left: 0;
+    margin-bottom: 50px;
+    margin-top: 0;
+  }
 }
