--- a/less/os-nav.less
+++ b/less/os-nav.less
@@ -16,6 +16,7 @@
   @media (min-width: @tablet-width) {
     width: 49%;
     margin-left: 0;
+    padding-top: 0;
   }
 }
 
@@ -43,5 +44,7 @@
     font-size: 18px;
     margin-left: 0;
     width: 54%;
+    margin-top: 60px;
+    margin-left: 40px;
   }
 }
