--- a/less/radio-buttons-group.less
+++ b/less/radio-buttons-group.less
@@ -10,36 +10,31 @@
   width: 80%;
   padding-left: 57px;
   transition: all 0.25s linear;
+  display: block;
+  overflow: hidden;
 
   .font-mixin(30px;@header-font;18px;normal);
 
   &::before {
     content: "";
     display: block;
-    width: 30px;
-    height: 20px;
+    width: 25px;
+    height: 21px;
     position: absolute;
-    top: -3px;
-    left: -6px;
+    top: 0;
+    left: 1px;
     padding-left: 10px;
     padding-top: 4px;
-    padding-bottom: 10px;
+    padding-bottom: 9px;
     border: 3px solid #e5e5e5;
-    border-radius: 50px;
+    border-radius: 100%;
     background-color: @white;
   }
 }
 
-.radio-buttons-group__input {
+.radio-button-group__input {
   display: none;
-  line-height: 30px;
   position: relative;
-  margin-bottom: 10px;
-  font-size: 18px;
-
-  &:checked {
-    display: none;
-  }
 }
 
 .radio-buttons-group__check::before {
@@ -49,4 +44,17 @@
   left: 10px;
   margin: auto;
   background: green;
+}
+.radio-button-group__input:checked + .radio-buttons-group__label::after {
+  content: "";
+  width: 19px;
+  height: 19px;
+  position: absolute;
+  top: 1px;
+  left: 2px;
+  transform: translate(50%, 50%);
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 100%;
+  background:  lighten(#d22856, 10%);
 }
