--- a/less/style.less
+++ b/less/style.less
@@ -27,6 +27,11 @@
 .container {
   margin: 0 auto;
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction:column;
+  }
 }
 
 .wrapper-flex {
@@ -34,6 +39,7 @@
   flex-direction: column;
   align-content: stretch;
   width: 100%;
+  margin: 0 auto;
 }
 
 @import "variables";
@@ -69,3 +75,4 @@
 @import "describe-block";
 @import "editor-block";
 @import "filter-range";
+@import "form-section";
