--- a/less/contest-page.less
+++ b/less/contest-page.less
@@ -5,15 +5,28 @@
   display: flex;
   width: 100%;
   height: 167px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 243px;
+    height: 0;
+  }
 }
 
 .contest-page__text {
   font-size: 24px;
   text-shadow: -3px 2px 5px #000000;
   text-align: center;
-  margin-top: 36px;
+  margin-top: 94px;
   display: block;
   padding-left: 20px;
   padding-right: 20px;
   font-weight: normal;
+
+  @media (min-width: @tablet-width) {
+    font-size: 50px;
+    line-height: 50px;
+    margin-top: 92px;
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
