--- a/less/style.less
+++ b/less/style.less
@@ -27,6 +27,7 @@
 .container {
   margin: 0 auto;
   width: 100%;
+  max-width: 960px;
 
   @media (min-width: @tablet-width) {
     display: flex;
@@ -38,8 +39,8 @@
   display: flex;
   flex-direction: column;
   align-content: stretch;
-  width: 100%;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 @import "variables";
