--- a/less/style.less
+++ b/less/style.less
@@ -22,6 +22,8 @@
 
 .wrapper {
   margin: 0 auto;
+  max-width: 960px;
+  padding: 0 20px;
 }
 
 .container {
@@ -41,6 +43,7 @@
   align-content: stretch;
   margin: 0 auto;
   padding: 0 20px;
+  max-width: 960px;
 }
 
 @import "variables";
